dev(ui): improve build overview layout

--- a/views/base.pug
+++ b/views/base.pug
@@ -4,9 +4,7 @@ html
         title Swingletree
         link(rel="stylesheet" href=`${ basePath }/static/css/main.css`)
 
-        link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/solid.css" integrity="sha384-Rw5qeepMFvJVEZdSo1nDQD5B6wX0m7c5Z/pLNvjkB14W6Yki1hKbSEQaX9ffUbWe" crossorigin="anonymous")
-        link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/brands.css" integrity="sha384-VGCZwiSnlHXYDojsRqeMn3IVvdzTx5JEuHgqZ3bYLCLUBV8rvihHApoA1Aso2TZA" crossorigin="anonymous")
-        link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/fontawesome.css" integrity="sha384-GVa9GOgVQgOk+TNYXu7S/InPTfSDTtBalSgkgqQ7sCik56N9ztlkoTr2f/T44oKV" crossorigin="anonymous")
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" integrity="sha256-zmfNZmXoNWBMemUOo1XUGFfc0ihGGLYdgtJS3KCr/l0=" crossorigin="anonymous")
 
         link(rel="apple-touch-icon" sizes="180x180" href=`${ basePath }/static/icon/apple-touch-icon.png`)
         link(rel="icon" type="image/png" sizes="32x32" href=`${ basePath }/static/icon/favicon-32x32.png`)
