--- a/views/builds.pug
+++ b/views/builds.pug
@@ -55,32 +55,35 @@ block content
               tr
                 td(colspan="6" class="detail-row")
                   div(class="collapse build-detail" id=`build-item-${ index }`)
-                    div.row
-                      div.col-md-5
-                        h5.detail-section Metadata
-                        if item.metadata
-                          table(class="table table-sm build-list")
-                            tbody
-                              each key, index in Object.keys(item.metadata)
-                                tr
-                                  td=key
-                                  td=item.metadata[key]
-                        else
-                          span None
-                      div.col-md-7
-                        h5.detail-section Annotations
-                        if item.annotations && item.annotations.length > 0
-                          table(class="table table-sm build-list")
-                            thead
-                              th Severity
-                              th Title
-                            tbody
-                              each annotation, index in item.annotations
-                                tr
-                                  td=annotation.severity
-                                  td=annotation.title
-                        else
-                          div None
+                    div.build-detail-content
+                      div.row
+                        div.col-md-5
+                          h5.detail-section Metadata
+                          if item.metadata
+                            table(class="table table-sm build-list")
+                              tbody
+                                each key, index in Object.keys(item.metadata)
+                                  tr
+                                    td=key
+                                    td=item.metadata[key]
+                          else
+                            span None
+                        div.col-md-7
+                          h5.detail-section Annotations
+                          if item.annotations && item.annotations.length > 0
+                            table(class="table table-sm build-list")
+                              thead
+                                th Severity
+                                th Title
+                              tbody
+                                each annotation, index in item.annotations
+                                  tr
+                                    td
+                                      span(class=`severity ${annotation.severity}`)
+                                      span=annotation.severity
+                                    td=annotation.title
+                          else
+                            div None
 
 
       div.col-12
