docs(pages): update github pages

--- a/docs/_includes/header-banner.html
+++ b/docs/_includes/header-banner.html
@@ -1,8 +1,12 @@
 <!-- main -->
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>Simplify your build feedback</h1>
-        <p>Add your build reports to your Commits and Pull Requests. See what's going on at one glance without leaving GitHub.</p>
+        <h1>Integrate and observe the results of your CI/CD pipeline tools</h1>
+        <p>
+            Swingletree helps you to get an overview of your pipelines by analyzing the output
+            of your CI/CD pipeline tools.<br/>
+            See what's going on at one glance without leaving GitHub.
+        </p>
 
         <ul class="list-inline">
 {%- unless page.id == "showcase" -%}
