docs: improve documentation

--- a/docs/_includes/head-ext.html
+++ b/docs/_includes/head-ext.html
@@ -1,3 +1,6 @@
 {% if page.noindex==true -%}
   <meta name="robots" content="noindex" />
 {%- endif %}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.3.1/mermaid.min.js" integrity="sha256-vOIuDSYDirTfyr+S2MjFnhOz6Rgiz4ODFAHATG0rFxw=" crossorigin="anonymous"></script>
+<script>mermaid.initialize({startOnLoad:true});</script>
