docs(pages): modify header

--- a/docs/_includes/header-banner.html
+++ b/docs/_includes/header-banner.html
@@ -1,11 +1,12 @@
 <!-- main -->
 <div class="header-container jumbotron">
-    <div class="container">
-        <h1>Integrate and observe the results of your CI/CD pipeline tools</h1>
+    <div class="container text-center">
+        <h2 style="color:#fff">Integrate and observe the results of your CI/CD pipeline tools</h2>
+        <h1>More transparency, less hassle.</h1>
         <p>
             Swingletree helps you to get an overview of your pipelines by analyzing the output
-            of your CI/CD pipeline tools.<br/>
-            See what's going on at one glance without leaving GitHub.
+            of your CI/CD pipeline tooling. Issues are annotated to your Pull-Request, reducing the need
+            of reading build logs of failed builds.
         </p>
 
         <ul class="list-inline">
