docs: update documentation resources

--- a/docs/_includes/header-banner.html
+++ b/docs/_includes/header-banner.html
@@ -3,7 +3,7 @@
     <div class="container">
         <h1>Integrate and observe your CI/CD tooling</h1>
         <p>
-            Tell developers what needs attention. More transparency, less hassle.
+            Show developers what needs attention. More transparency, less hassle.
         </p>
 
         <ul class="list-inline">
