--- a/docs/_includes/head-ext.html
+++ b/docs/_includes/head-ext.html
@@ -2,5 +2,7 @@
   <meta name="robots" content="noindex" />
 {%- endif %}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.3.1/mermaid.min.js" integrity="sha256-vOIuDSYDirTfyr+S2MjFnhOz6Rgiz4ODFAHATG0rFxw=" crossorigin="anonymous"></script>
-<script>mermaid.initialize({startOnLoad:true});</script>
+{% if page.mermaid==true -%}
+  <script src="https://unpkg.com/mermaid@8.4.2/dist/mermaid.min.js" integrity="sha384-j+T3wNLP7mVmXXaeEzwcuqFhV7DxDefao2gDPNLkpQ0/hh0KyrvtwtBOJdp5pjBF" crossorigin="anonymous"></script>
+  <script>mermaid.initialize({startOnLoad:true,theme:"neutral"});</script>
+{%- endif %}
