--- a/docs/_includes/head-ext.html
+++ b/docs/_includes/head-ext.html
@@ -3,6 +3,6 @@
 {%- endif %}
 
 {% if page.mermaid==true -%}
-  <script src="https://unpkg.com/mermaid@8.4.6/dist/mermaid.min.js" integrity="sha384-i+IYfRfa9+1jk0rq4c27q5GP9EK/rFQ1oFotMeawnVD7qPZsi5m4DDzJEz8uDIEt" crossorigin="anonymous"></script> 
+  <script src="https://unpkg.com/browse/mermaid@8.5.2/dist/mermaid.min.js" integrity="sha384-YCAat9DzGCmKFJUJab6b16XQVd0y0w/HIyCG/vbgXMpJOZweu0oUiIvS6czvCFId" crossorigin="anonymous"></script>
   <script>mermaid.initialize({startOnLoad:true,theme:"neutral"});</script>
 {%- endif %}
