--- a/docs/_includes/head-ext.html
+++ b/docs/_includes/head-ext.html
@@ -3,6 +3,6 @@
 {%- endif %}
 
 {% if page.mermaid==true -%}
-  <script src="https://unpkg.com/browse/mermaid@8.5.2/dist/mermaid.min.js" integrity="sha384-YCAat9DzGCmKFJUJab6b16XQVd0y0w/HIyCG/vbgXMpJOZweu0oUiIvS6czvCFId" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/mermaid@8.5.2/dist/mermaid.min.js" integrity="sha384-dV0RNdYNgPqjamYrB83Q21NNeuYk1jpKyUBkKQrT+c7krNFk4k39ktYZV4mOdMV1" crossorigin="anonymous"></script>
   <script>mermaid.initialize({startOnLoad:true,theme:"neutral"});</script>
 {%- endif %}
